[package]
name = "day11"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
divan = "0.1.14"

[build-dependencies]
bindgen = {version = "0.69.4", optional = true}
cmake = {version = "0.1.45", optional = true}

[features]
default = []
Swift = ["bindgen", "cmake"]

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "divan"
harness = false
