[package]
name = "day11"
version = "0.1.0"
edition = "2021"

[dependencies]
day11_swift = { path = "Swift", optional = true}
day11_cpp = { path = "cpp", optional = false}

[dev-dependencies]
criterion = "0.5.1"
divan = "0.1.14"

[features]
default = []
Swift = ["day11_swift"]

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "divan"
harness = false
